gestore-cam added

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Document</title>
+    <title>Zoom | Boolean Inside</title>
 </head>
 <body>
-    <header></header>
+    <div id="gestore-cam">
+        <span>"i" Speaker View</span>
+        <span>"i"</span>
+    </div>
 
-    <main></main>
+    <div id="cam">
+        
+    </div>
 
-    <footer></footer>
+    <div id="gestore-riunione"></div>
+
 </body>
 </html>
