--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Zoom | Boolean Inside</title>
 </head>
 <body>
@@ -14,10 +15,79 @@
     </div>
 
     <div id="cam">
-        
+
     </div>
 
-    <div id="gestore-riunione"></div>
+    <div id="gestore-riunione">
+        <div class="sez-gestore-riunione"> <!-- la classe "sez-gestore-riunione" si occupa delle 3 sezione della parte inferiore -->
+            <div class="casella-e-freccia"> <!-- flex row --> <!-- casella-e-freccia si occupa del singolo bottone, più nello specifico di quelli che hanno anche la freccia verso l'alto -->
+                <div class="icon"> <!-- flex columbn --> <!-- icon si occupa più nello specifico di icona e testo -->
+                    <span><i class="bi bi-mic-fill"></i></span>
+                    <span>Mute</span>
+                </div>
+                <span><i class="bi bi-caret-up-fill"></i></span>
+            </div>
+            <div class="casella-e-freccia">
+                <div class="icon">
+                    <span><i class="bi bi-camera-video-fill"></i></span>
+                    <span>Stop Video</span>
+                </div>
+                <span><i class="bi bi-caret-up-fill"></i></span>
+            </div>
+        </div>
+        <div class="sez-gestore-riunione">
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-person-plus-fill"></i></span>
+                    <span>Invite</span>
+                </div>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-people-fill"></i></span>
+                    <span>Manage Participants</span>
+                </div>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-bar-chart-line-fill"></i></span>
+                    <span>Polling</span>
+                </div>
+            </div>
+            <div class="casella-e-freccia">
+                <div class="icon"> <!-- flex columbn -->
+                    <span style="color: green"><i class="bi bi-projector-fill"></i></span>
+                    <span>Share Screen</span>
+                </div>
+                <span><i class="bi bi-caret-up-fill"></i></span>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-signal"></i></span>
+                    <span>Chat</span>
+                </div>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-vinyl-fill"></i></span>
+                    <span>Record</span>
+                </div>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-microsoft"></i></span>
+                    <span>Breakout Rooms</span>
+                </div>
+            </div>
+            <div>
+                <div class="icon"> <!-- flex columbn -->
+                    <span><i class="bi bi-three-dots"></i></span>
+                    <span>More</span>
+                </div>
+            </div>
+        </div>
+        <div id="chiusura-chiamata" class="sez-gestore-riunione">End meeting</div>
+    </div>
 
 </body>
 </html>
